Services/zitadel/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zitadel
  namespace: zitadel
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zitadel.zlaya.tech`)
      kind: Rule
      services:
        - name: my-zitadel
          port: 8080
      middlewares:
        - name: default-headers
  tls: {}
